--- a/package.json
+++ b/package.json
@@ -13,16 +13,27 @@
     "format": "(gitzone format)"
   },
   "devDependencies": {
-    "@gitzone/tsbuild": "^2.1.8",
-    "@gitzone/tstest": "^1.0.20",
-    "@pushrocks/tapbundle": "^3.0.9",
-    "@types/node": "^11.13.4",
-    "tslint": "^5.15.0",
+    "@gitzone/tsbuild": "^2.1.11",
+    "@gitzone/tstest": "^1.0.24",
+    "@pushrocks/tapbundle": "^3.0.11",
+    "@types/node": "^12.0.10",
+    "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0"
   },
   "dependencies": {
-    "@pushrocks/smartcsv": "^1.0.15",
-    "@pushrocks/smartfile": "^7.0.2",
-    "@pushrocks/smarttime": "^3.0.7"
-  }
+    "@pushrocks/smartcsv": "^1.0.16",
+    "@pushrocks/smartfile": "^7.0.4",
+    "@pushrocks/smarttime": "^3.0.12",
+    "@tsclass/tsclass": "^2.0.0"
+  },
+  "files": [
+    "ts/*",
+    "ts_web/*",
+    "dist/*",
+    "dist_web/*",
+    "assets/*",
+    "cli.js",
+    "npmextra.json",
+    "readme.md"
+  ]
 }
