fix(core): update

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,6 +50,18 @@ testLTS:
   - docker
   - notpriv
 
+testBuild:
+  stage: test
+  script:
+  - npmci npm prepare
+  - npmci node install lts
+  - npmci npm install
+  - npmci command npm run build
+  coverage: /\d+.?\d+?\%\s*coverage/
+  tags:
+  - docker
+  - notpriv
+
 release:
   stage: release
   script:
